<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_CraneParameters" Id="{0acdc32a-38d7-42ed-a023-5b5f43624fa6}">
    <Declaration><![CDATA[TYPE ST_CraneParameters :
STRUCT
	fCyclicTime : LREAL := 0.01; //[s]
	fMaxVelocityLimit : LREAL := 0.05; //[m/s]
	fBoreArea : LREAL := 0.0033183;
	fAnnulusArea : LREAL := 0.0023562;
	fMaxFlowCapacity : LREAL := 30; //[l/min]
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>